Add slave touch device to touch_device_lookup_ and touch_device_list_

Unexpected MouseMove event when touch the touch screen issue is because we
didn't add slave touch device to touch_device_lookup_ and touch_device_list_
then we got false when we check if it is from touch screen by sourceid(not
device id).

This patch we add slave touch device to touch_device_lookup_ and
touch_device_list_.

BUG=678074

Review-Url: https://codereview.chromium.org/2552343008
Cr-Commit-Position: refs/heads/master@{#456488}

Former-commit-id: 1d64628a6b9a59469503b6a82a68606a09950d9a